fixed visual break in mobile

--- a/src/app/components/GamePhases/Battle.module.css
+++ b/src/app/components/GamePhases/Battle.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .battle h1 {
@@ -37,7 +37,7 @@
   .battle__content {
     flex-direction: column;
     justify-content: center;
-    margin-top: 0;
+    margin-top: 4rem;
   }
 }
 
@@ -66,10 +66,6 @@
   .battle__box {
     gap: 0;
   }
-
-  .battle__box:first-child {
-    margin-top: 10rem;
-  }
 }
 
 .battle__box:hover {
@@ -92,9 +88,9 @@
 @media only screen and (max-width: 700px) {
   .battle__result {
     flex-direction: column;
-    margin: 2rem 0;
-    margin-bottom: 6rem;
-    gap: 1rem;
+    margin: 0;
+    margin-bottom: 4rem;
+    gap: 0;
     height: auto;
     animation: showInDisplayMobile linear 3s;
   }
@@ -161,6 +157,7 @@
 @media only screen and (max-width: 700px) {
   .battle__score {
     margin-top: 2rem;
+    gap: 1rem;
   }
 }
 
