--- a/src/app/components/GamePhases/ComputerChoosing.module.css
+++ b/src/app/components/GamePhases/ComputerChoosing.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   animation: 1s ease-out 4s 1 opacityShowing;
   font-size: 2rem;
 }
@@ -10,6 +10,7 @@
 @media only screen and (max-width: 700px) {
   .main {
     text-align: center;
+    font-size: 1.8rem;
   }
 }
 
