--- a/src/app/components/GamePhases/Weapon.module.css
+++ b/src/app/components/GamePhases/Weapon.module.css
@@ -21,8 +21,9 @@
 @media only screen and (max-width: 700px) {
   .selection__box {
     min-height: 10rem;
-    padding: 5rem 5rem;
+    padding: 3.5rem 4.5rem;
     gap: 4rem;
+    font-size: 2rem;
   }
 }
 
@@ -31,6 +32,12 @@
   box-shadow: rgba(255, 255, 255, 0.25) 0rem 0.6rem 1.2rem -2rem,
     rgba(255, 255, 255, 0.3) 0rem 3px 7rem -1rem;
   font-size: 2.6rem;
+}
+
+@media only screen and (max-width: 900px) {
+  .selection__box:hover {
+    font-size: 2.2rem;
+  }
 }
 
 .selection__images {
